# shapes_api

./: .gitignore  API.md  LLMS.txt  README.md  license
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
examples/basic/javascript/: utils.js
examples/basic/javascript/auth/: .env.example  LICENSE  main.js  package-lock.json  package.json
examples/basic/javascript/basic/: main.js  package-lock.json  package.json
examples/basic/javascript/http/: README.md  main.js  package-lock.json
examples/basic/javascript/image/: .env.example  main.js  package-lock.json
examples/basic/javascript/shape_info/: README.md  main.js  package.json
examples/basic/javascript/tools/: README.md  main.js  package-lock.json
examples/basic/php/: README.md  example_post.php  shapes.php
examples/basic/python/basic/: README.md  main.py  setup.sh
examples/basic/python/headers/: README.md  pyproject.toml
examples/basic/python/http/: main.py
examples/basic/python/proxy/: .env  proxy.py  readme.md
examples/games/shape-chess/: README.md  package.json
examples/games/shape-chess/app/: layout.js  page.js
examples/games/shape-chess/app/api/bot-move/: route.js
examples/games/shape-chess/app/api/chat/: route.js
examples/games/shape-chess/app/components/: ChessGame.js
examples/games/shape-chess/app/styles/: ChessGame.css
examples/social/shape-bluesky/: .env.example  LICENSE
examples/social/shape-guilded/: .env.example  LICENSE  README.md  index.js  package.json
examples/social/shape-irc/: main.py
examples/social/shape-mail/: LICENSE  README.md  brain.py  mailgun_driver.py  models.py  requirements.txt
examples/social/shape-reddit/: .env.example  README.md  index.js  package-lock.json  package.json
examples/social/shape-revolt/: .env.example  README.md  index.js  package.json
examples/social/shape-slack/: .dockerignore  Dockerfile  logs.py
examples/social/shape-steam/: .env  index.js  readme.md
examples/social/shape-teams/: .env.example  README.md  config.js  index.js  package.json  teamsBot.js
examples/social/shape-text/: entrypoint.sh
examples/social/shape-twitch/: .env.example  index.js  package-lock.json  package.json  readme.md
examples/social/shape-voice/: .env.example  eslint.config.js  package-lock.json  tailwind.config.js  vite.config.js
examples/social/shape-voice/src/: App.jsx  main.jsx
examples/social/shape-whatsapp/: .env.example  README.md  index.js  package-lock.json  package.json
examples/social/shapes-corvy/: .env  README.md  corvy-sdk.js  index.js
examples/social/shapes-matrix/: .env  index.js  readme.md
examples/social/shapes-telegram/: access_manager.py  config.py  index.html  main.py  pyproject.toml  run.py  shapes_client.py  start_script.sh
examples/websites/shape-search/: .env  package.json  readme.md
examples/websites/shape-search/app/: globals.css  layout.tsx  page.tsx
examples/websites/shape-search/app/api/search/: route.ts
javascript/auth/: README.md  main.js  package.json
javascript/basic/: package.json
javascript/http/: main.js  package.json
javascript/image/: README.md  main.js  package.json
javascript/tools/: README.md  package.json
nodejs-advanced/: README.md  main.js  package.json
nodejs-basic/: .env.example  README.md  formless.js  package-lock.json  package.json  shape.js
php/: .env.example  DockerFile  example_get.php  shapes.php
python-advanced/: README.md  main.py  setup.sh
python-basic/: .env.example  README.md  formless.py  main.py  requirements.txt  setup.sh  shape.py
python/basic/: main.py  pyproject.toml
python/headers/: main.py  pyproject.toml
python/http/: README.md  pyproject.toml
revolt-basic/: .gitignore  README.md  index.js  package-lock.json  package.json
shape-bluesky/: .gitignore  README.md  index.js  package-lock.json  package.json
shape-chess/: .env
shape-guilded/: package.json
shape-irc/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
shape-mail/: CONTRIBUTING.md  helpers.py  main.py
shape-revolt/: README.md  index.js  package.json
shape-revolt-bot/: .env.example  .gitignore  README.md  package-lock.json  package.json
shape-slack/: README.md  app.py  entrypoint.sh  main.py  pyproject.toml  setup.sh
shape-text/: Dockerfile  README.md  brain.py  main.py  pyproject.toml
shape-threejs/: .env.example  README.md  components.json  eslint.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
shape-threejs/src/: App.tsx  main.tsx
shape-threejs/src/assets/models/: bed.glb  shape.txt
shape-threejs/src/components/: Camera.tsx  ContainerDimensions.tsx  MainLayout.tsx  RechargeStation.tsx  SafeViewport.tsx  Shape.tsx  ThreeContainer.tsx  types.ts
shape-threejs/src/types/: vite-env.d.ts
shape-voice/: .env.example  README.md  index.html  package-lock.json  package.json
shape-voice/public/: audioWorkletProcessor.js  ttsWorker.js  utils.js
shape-voice/src/: App.jsx  main.jsx
shapes-telegram/: DEPLOY.md  README.md  README.txt  app.py  approved_chats.json  bot.py  conversation_manager.py  deploy.sh  gunicorn_app.py  utils.py  web_server.py  wsgi.py
slack-basic/: .env.example  README.md  app.py  requirements.txt
tools/debugger/: PLAN.md  README.md  codex.md  index.js  package-lock.json  package.json
tools/debugger/src/: utils.js
