[project]
name = "shapesinc-python-slack"
version = "1.0.0"
description = "Slack integration using the Shapes API."
authors = [
    { name = "Shapes Inc.", email = "hi@shapes.inc" }
]
keywords = []
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.21.0",
    "flask>=2.2.3",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "aiohttp>=3.8.4",
    "asyncio>=3.4.3",
    "requests>=2.30.0",
    "pydantic>=2.0.0"
]

# Define py-modules explicitly to only include main.py
[tool.setuptools]
py-modules = ["main"]
# Remove any reference to logs_route if it doesn't exist yet

[project.urls]
Homepage = "https://shapes.inc"
Repository = "https://github.com/shapesinc/api.git"

[project.scripts]
shape-slack = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"