[tool.poetry]
name = "shape-text"
version = "0.1.0"
description = "A Python library for integrating Shapes API into text messaging applications using Twilio"
authors = ["Shapes, Inc. <hi@shapes.inc>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/shapesinc/api"
repository = "https://github.com/shapesinc/api"
keywords = ["ai", "shapes", "twilio", "sms", "chatbot"]
package-mode = false
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.78.0"
twilio = "^9.6.0"
python-dotenv = "^1.1.0"
flask = "^3.1.0"
requests = "^2.31.0"

[tool.poetry.group.optional.dependencies]
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
